@@ -3,6 +3,7 @@ package erebus.entity;
 import net.minecraft.block.Block;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.EntityLiving;
+import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.EnumCreatureAttribute;
 import net.minecraft.entity.IEntityLivingData;
 import net.minecraft.entity.SharedMonsterAttributes;
@@ -14,20 +15,17 @@ import net.minecraft.entity.boss.IBossDisplayData;
 import net.minecraft.entity.monster.EntityMob;
 import net.minecraft.entity.monster.EntitySpider;
 import net.minecraft.entity.player.EntityPlayer;
-import net.minecraft.init.Items;
-import net.minecraft.item.ItemStack;
 import net.minecraft.potion.Potion;
 import net.minecraft.potion.PotionEffect;
+import net.minecraft.util.DamageSource;
+import net.minecraft.util.EntityDamageSourceIndirect;
+import net.minecraft.util.MathHelper;
 import net.minecraft.world.EnumDifficulty;
 import net.minecraft.world.World;
-import erebus.ModItems;
 import erebus.entity.ai.EntityAITarantulaMinibossAttack;
-import erebus.item.Materials;
 
 public class EntityTarantulaMiniboss extends EntityMob implements IBossDisplayData
 {
-	public int skin = rand.nextInt(99);
-
 	public EntityTarantulaMiniboss(World world)
 	{
 		super(world);
@@ -35,7 +33,7 @@ public class EntityTarantulaMiniboss extends EntityMob implements IBossDisplayDa
 		experienceValue = 100;
 		tasks.addTask(0, new EntityAISwimming(this));
 		tasks.addTask(1, new EntityAITarantulaMinibossAttack(this, EntityPlayer.class, 0.3D, false));
-		tasks.addTask(2, new EntityAIWatchClosest(this, EntityPlayer.class, 6.0F));
+		tasks.addTask(2, new EntityAIWatchClosest(this, EntityPlayer.class, 16.0F));
 		targetTasks.addTask(0, new EntityAIHurtByTarget(this, false));
 		targetTasks.addTask(1, new EntityAINearestAttackableTarget(this, EntityPlayer.class, 0, true));
 	}
@@ -44,16 +42,18 @@ public class EntityTarantulaMiniboss extends EntityMob implements IBossDisplayDa
 	protected void entityInit()
 	{
 		super.entityInit();
-		dataWatcher.addObject(16, new Byte((byte) 0));
+		dataWatcher.addObject(17, Byte.valueOf((byte)1));
 	}
 
 	@Override
 	protected void applyEntityAttributes()
 	{
 		super.applyEntityAttributes();
-		getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(200.0D);
-		getEntityAttribute(SharedMonsterAttributes.movementSpeed).setBaseValue(0.7D);
+		getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(300.0D);
+		getEntityAttribute(SharedMonsterAttributes.movementSpeed).setBaseValue(0.9D);
 		getEntityAttribute(SharedMonsterAttributes.attackDamage).setBaseValue(8.0D);
+		getEntityAttribute(SharedMonsterAttributes.followRange).setBaseValue(32.0D);
+		getEntityAttribute(SharedMonsterAttributes.knockbackResistance).setBaseValue(1.0D);
 	}
 	
 	@Override
@@ -73,17 +73,17 @@ public class EntityTarantulaMiniboss extends EntityMob implements IBossDisplayDa
 	{
 		return false;
 	}
+	
+	@Override
+    public boolean canBePushed()
+    {
+        return false;
+    }
 
 	@Override
 	public int getTotalArmorValue()
 	{
 		return 8;
-	}
-
-	@Override
-	public boolean isOnLadder()
-	{
-		return isBesideClimbableBlock();
 	}
 
 	@Override
@@ -101,26 +101,6 @@ public class EntityTarantulaMiniboss extends EntityMob implements IBossDisplayDa
 	public boolean isPotionApplicable(PotionEffect potionEffect)
 	{
 		return potionEffect.getPotionID() == Potion.poison.id ? false : super.isPotionApplicable(potionEffect);
-	}
-
-	public boolean isBesideClimbableBlock()
-	{
-		return (dataWatcher.getWatchableObjectByte(16) & 1) != 0;
-	}
-
-	public void setBesideClimbableBlock(boolean besideBlock)
-	{
-		byte b0 = dataWatcher.getWatchableObjectByte(16);
-
-		if (besideBlock)
-		{
-			b0 = (byte) (b0 | 1);
-		} else
-		{
-			b0 &= -2;
-		}
-
-		dataWatcher.updateObject(16, Byte.valueOf(b0));
 	}
 
 	@Override
@@ -151,10 +131,6 @@ public class EntityTarantulaMiniboss extends EntityMob implements IBossDisplayDa
 	public void onUpdate()
 	{
 		super.onUpdate();
-		if (!worldObj.isRemote)
-		{
-			setBesideClimbableBlock(isCollidedHorizontally);
-		}
 		
 		EnumDifficulty difficulty = worldObj.difficultySetting;
 		if (difficulty == EnumDifficulty.PEACEFUL)
@@ -162,6 +138,26 @@ public class EntityTarantulaMiniboss extends EntityMob implements IBossDisplayDa
 			worldObj.difficultySetting = EnumDifficulty.EASY;
 		}
 		worldObj.difficultySetting = difficulty;
+		
+		if(getHealth() <= 150 && getFancyRenderOverlay()){
+			dataWatcher.updateObject(17, Byte.valueOf((byte) 0));
+		}
+		
+		if (getHealth() <= 150 && getAttackTarget() != null) {
+			float distance = (float) getDistance(getAttackTarget().posX, getAttackTarget().boundingBox.minY, getAttackTarget().posZ);
+			forceCollideWithPlayer(getAttackTarget(), distance);
+		}
+
+	}
+	
+	@Override
+	public boolean attackEntityFrom(DamageSource source, float damage)
+	{
+		if (getHealth() > 150 && !(source instanceof EntityDamageSourceIndirect))
+		{
+			return false;
+		}
+		return super.attackEntityFrom(source, damage);
 	}
 
 	@Override
@@ -169,7 +165,6 @@ public class EntityTarantulaMiniboss extends EntityMob implements IBossDisplayDa
 	{
 		if (super.attackEntityAsMob(entity))
 		{
-
 			if (entity instanceof EntityLiving)
 			{
 				byte duration = 0;
@@ -200,32 +195,7 @@ public class EntityTarantulaMiniboss extends EntityMob implements IBossDisplayDa
 	@Override
 	protected void dropFewItems(boolean recentlyHit, int looting)
 	{
-		int chanceFiftyFifty = rand.nextInt(1) + 1;
-		int chance20x60x20 = rand.nextInt(4);
-		int legDrop = 0;
-		switch (chance20x60x20)
-		{
-			case 0:
-				legDrop = 1;
-				break;
-			case 1:
-			case 2:
-			case 3:
-				legDrop = 2;
-				break;
-			case 4:
-				legDrop = 3;
-				break;
-		}
-		if (isBurning())
-		{
-			entityDropItem(new ItemStack(ModItems.food, legDrop + looting, 5), 0.0F);
-		} else
-		{
-			entityDropItem(new ItemStack(ModItems.food, legDrop + looting, 4), 0.0F);
-		}
-		dropItem(Items.spider_eye, chanceFiftyFifty + looting);
-		entityDropItem(Materials.createStack(Materials.DATA.poisonGland, 1 + rand.nextInt(2)), 0.0F);
+		
 	}
 
 	@Override
@@ -259,5 +229,27 @@ public class EntityTarantulaMiniboss extends EntityMob implements IBossDisplayDa
 			}
 		}
 		return (IEntityLivingData) entityLivingData1;
+	}
+	
+    public boolean getFancyRenderOverlay()
+    {
+        return dataWatcher.getWatchableObjectByte(17) == 1;
+    }
+    
+	public void forceCollideWithPlayer(EntityLivingBase entity, float distance)
+	{
+		if (distance > 2.0F && distance < 6.0F)
+		{
+			if (onGround)
+			{
+				getLookHelper().setLookPositionWithEntity(entity, 30.0F, 30.0F);
+				double distanceX = entity.posX - posX;
+				double distanceZ = entity.posZ - posZ;
+				float squareRoot = MathHelper.sqrt_double(distanceX * distanceX + distanceZ * distanceZ);
+				motionX = distanceX / squareRoot * 0.5D * 0.300000011920929D + motionX * 0.10000000298023224D;
+				motionZ = distanceZ / squareRoot * 0.5D * 0.300000011920929D + motionZ * 0.10000000298023224D;
+				motionY = 0D;
+			}
+		}
 	}
 }
